syntax = "proto3";

package depot.cli.v1beta1;

import "google/protobuf/timestamp.proto";

service BuildService {
  rpc CreateBuild(CreateBuildRequest) returns (CreateBuildResponse);
  rpc FinishBuild(FinishBuildRequest) returns (FinishBuildResponse);
  rpc GetBuildKitConnection(GetBuildKitConnectionRequest) returns (stream GetBuildKitConnectionResponse);
  rpc ReportBuildHealth(stream ReportBuildHealthRequest) returns (ReportBuildHealthResponse);
}

message CreateBuildRequest {
  string project_id = 1;
}

message CreateBuildResponse {
  string build_id = 1;
}

message FinishBuildRequest {
  string build_id = 1;
  oneof result {
    BuildSuccess success = 2;
    BuildError error = 3;
  }

  message BuildSuccess {}

  message BuildError {
    string error = 1;
  }
}

message FinishBuildResponse {}

enum BuilderPlatform {
  BUILDER_PLATFORM_UNSPECIFIED = 0;
  BUILDER_PLATFORM_AMD64 = 1;
  BUILDER_PLATFORM_ARM64 = 2;
}

message GetBuildKitConnectionRequest {
  string build_id = 1;
  BuilderPlatform platform = 2;
}

message GetBuildKitConnectionResponse {
  oneof connection {
    PendingConnection pending = 1;
    ActiveConnection active = 2;
  }

  message PendingConnection {}

  message ActiveConnection {
    string endpoint = 1;
    string server_name = 2;
    Cert cert = 3;
    Cert ca_cert = 4;
  }
}

message Cert {
  string cert = 1;
  string key = 2;
}

message ReportBuildHealthRequest {
  string build_id = 1;
  BuilderPlatform platform = 2;
}

message ReportBuildHealthResponse {}
